Fixed the alignment of the table content for reference records (#1290)
* Added table body and head

* replaced schema name with field name in reference record

* Cosmetic fix

---------

--- a/app/css/template.css
+++ b/app/css/template.css
@@ -2811,7 +2811,7 @@ padding-right: 23%;
     cursor: pointer;
 }
 #reference-records-table .truncate-record {
-    display: -webkit-box;
+    /* display: -webkit-box; */
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
